<resources>

    <!-- global -->
    <string name="app_name">TravelCar</string>
    <string name="double_string_with_space">%s %s</string>

    <!-- for search api -->
    <string name="api_key">AIzaSyC0Qe8M0A45zjdixxsMKhqPfRaiuHP8DCg</string>

    <!-- main activity -->
    <string name="main_tab_search">Recherche</string>
    <string name="main_tab_my_account">Mon compte</string>

    <!-- search fragment -->
    <string name="search_no_options">Pas d\'options !</string>
    <string name="search_no_car_error">Rien à afficher</string>
    <string name="search_car">Rechercher une voiture</string>
    <string name="search_nothing">Rien d\'intéressant !</string>

    <string name="search_transition_name_picture">transition_picture_%d</string>
    <string name="search_transition_make_and_model">transition_make_and_mode_%d</string>
    <string name="search_transition_year">transition_year_%d</string>
    <string name="search_transition_options">transition_options_%d</string>

    <!-- account fragmemt -->
    <!-- empty -->
    <string name="account_empty_new_user_title">Pas de compte !</string>
    <string name="account_empty_new_user_description">Créer un compte</string>

    <!-- normal -->
    <string name="account_section_name_title">Identité</string>
    <string name="account_section_address">Adresse</string>
    <string name="account_section_birthday">Date de naissance</string>

    <!-- modify -->
    <string name="account_modify_change_photo_title">Changer de photo</string>
    <string name="account_modify_change_photo_take_photo">Prendre une photo</string>
    <string name="account_modify_change_photo_select_photo">Sélectionner une photo</string>
    <string name="account_modify_displayed_address_search">%s %s</string>

    <string name="account_modify_hint_first_name">Prénom</string>
    <string name="account_modify_hint_last_name">Nom de famille</string>
    <string name="account_modify_hint_address">Adresse</string>
    <string name="account_modify_hint_birthday">Date d\'anniversaire</string>

    <string name="account_modify_save">Enregistrer</string>
    <string name="account_modify_erase">Effacer</string>
    <string name="account_modify_user_not_saved">Vos modification n\'ont pas été enregistréés</string>

</resources>