<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/chooseImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_big"
        android:background="@color/light_blue_400"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
        app:srcCompat="@drawable/ic_add_photo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstName"
        style="@style/TextFieldSimpleTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_bigger"
        android:layout_marginTop="@dimen/margin_bigger"
        android:hint="@string/account_modify_hint_first_name"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_profil_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstNameEditText"
            style="@style/TextFieldInputTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastName"
        style="@style/TextFieldSimpleTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_bigger"
        android:layout_marginTop="@dimen/margin_medium"
        android:hint="@string/account_modify_hint_last_name"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_profil_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastNameEditText"
            style="@style/TextFieldInputTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address"
        style="@style/TextFieldDropTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_bigger"
        android:layout_marginTop="@dimen/margin_medium"
        android:hint="@string/account_modify_hint_address"
        app:endIconMode="clear_text">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/addressEditText"
            style="@style/TextFieldInputTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textColor="@color/dark_1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/birthday"
        style="@style/TextFieldSimpleTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_bigger"
        android:layout_marginTop="@dimen/margin_medium"
        android:hint="@string/account_modify_hint_birthday">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/birthdayEditText"
            style="@style/TextFieldInputTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_big"
        android:background="@drawable/selector_button"
        android:paddingHorizontal="@dimen/margin_big"
        android:text="@string/account_modify_save" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_big"
        android:background="@drawable/selector_button"
        android:paddingHorizontal="@dimen/margin_big"
        android:text="@string/account_modify_erase" />

</androidx.appcompat.widget.LinearLayoutCompat>